--- a/app.json
+++ b/app.json
@@ -15,7 +15,7 @@
 
   ],
   "window":{
-    "backgroundTextStyle":"light",
+    "backgroundTextStyle":"dark",
     "navigationBarBackgroundColor": "#297EFC",
     "navigationBarTitleText": "抠客",
     "navigationBarTextStyle":"white"
