添加网络请求

--- a/app.json
+++ b/app.json
@@ -10,6 +10,7 @@
     "pages/analyse/bill/bill",
     "pages/analyse/bonus/bonus",
     "pages/analyse/personas/personas",
+    "pages/analyse/cooperation/index",
 
     "pages/manager/tenant/tenant",
 
