--- a/app.json
+++ b/app.json
@@ -1,22 +1,10 @@
 {
   "pages":[
-    
+
     "pages/realtimedata/trans/trans",
-    "pages/logs/logs",
     "pages/index/index",
-
-    "pages/realtimedata/chart/chart",
-
-    "pages/analyse/list/list",
-    "pages/analyse/bill/bill",
-    "pages/analyse/bonus/bonus",
-    "pages/analyse/personas/personas",
-    "pages/analyse/cooperation/index",
-
-    "pages/manager/tenant/tenant",
-
-    "pages/user/index/index"
-
+    "pages/logs/logs"
+    
   ],
   "window":{
     "backgroundTextStyle":"dark",
@@ -24,36 +12,11 @@
     "navigationBarTitleText": "抠客",
     "navigationBarTextStyle":"white"
   },
-  "tabBar": {
-    "selectedColor": "#597FF2",
-    "list": [{
-      "pagePath": "pages/realtimedata/trans/trans",
-      "text": "实时数据",
-      "iconPath": "images/tabbar1.png",
-      "selectedIconPath": "images/tabbar1_select.png"
-    },{
-      "pagePath": "pages/analyse/list/list",
-      "text": "数据分析",
-      "iconPath": "images/tabbar2.png",
-      "selectedIconPath": "images/tabbar2_select.png"
-    },
-    {
-      "pagePath": "pages/manager/tenant/tenant",
-      "text": "商户管理",
-      "iconPath": "images/tabbar3.png",
-      "selectedIconPath": "images/tabbar2_select.png"
-    },
-    {
-      "pagePath": "pages/user/index/index",
-      "text": "我的",
-      "iconPath": "images/tabbar4.png",
-      "selectedIconPath": "images/tabbar2_select.png"
-    }]
-  },
   "networkTimeout": {
     "request": 10000,
     "connectSocket": 20000,
     "uploadFile": 20000,
     "downloadFile": 20000
-  }
+  },
+  "debug": true
 }
